# demo

./: .fstack.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODOS.md
src/: main.cpp  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
tests/: test_calculator.cpp
